--- a/contact.html
+++ b/contact.html
@@ -1,172 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact – IronDillo Cybersecurity</title>
-  <style>
-    form {
-  max-width: 600px;
-  margin-top: 1.5rem;
-  background-color: #121212;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0, 180, 182, 0.3);
-}
-
-label {
-  display: block;
-  margin-top: 1.25rem;
-  font-weight: 600;
-  font-size: 1rem;
-  color: #00b4b6;
-}
-
-input,
-textarea {
-  width: 100%;
-  padding: 0.75rem 1rem;
-  margin-top: 0.5rem;
-  background: #1a1a1a;
-  border: 2px solid #444;
-  color: #eee;
-  border-radius: 6px;
-  font-size: 1rem;
-  transition: border-color 0.3s ease;
-  font-family: inherit;
-}
-
-input:focus,
-textarea:focus {
-  border-color: #00b4b6;
-  outline: none;
-  box-shadow: 0 0 6px #00b4b6;
-}
-
-button {
-  margin-top: 2rem;
-  background-color: #00b4b6;
-  color: #0e0e0e;
-  padding: 0.85rem 2rem;
-  border: none;
-  border-radius: 8px;
-  font-weight: 700;
-  font-size: 1.1rem;
-  cursor: pointer;
-  transition: background-color 0.25s ease;
-}
-
-button:hover,
-button:focus {
-  background-color: #009393;
-}
-
-.success-message {
-  margin-top: 1.5rem;
-  color: #00b4b6;
-  font-weight: 700;
-  font-size: 1.1rem;
-  text-align: center;
-}
-
-    body {
-      background-color: #0e0e0e;
-      color: #ffffff;
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      line-height: 1.6;
-    }
-    h1 {
-      color: #00b4b6;
-    }
-    form {
-      max-width: 600px;
-      margin-top: 1rem;
-    }
-    label {
-      display: block;
-      margin-top: 1rem;
-      font-weight: bold;
-    }
-    input, textarea {
-      width: 100%;
-      padding: 0.75rem;
-      margin-top: 0.25rem;
-      background: #1a1a1a;
-      border: 1px solid #444;
-      color: #fff;
-      border-radius: 4px;
-    }
-    button {
-      margin-top: 1rem;
-      background-color: #00b4b6;
-      color: #000;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    .note {
-      font-size: 0.875rem;
-      color: #999;
-      margin-top: 1rem;
-    }
-    .success-message {
-      margin-top: 1rem;
-      color: #00b4b6;
-      font-weight: bold;
-    }
-  </style>
+  <title>Contact | Iron Dillo Cybersecurity</title>
+  <meta name="description" content="Contact Iron Dillo Cybersecurity for trusted cybersecurity consulting for individuals and small businesses in East Texas and rural communities." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>Contact IronDillo</h1>
-  <p>Have a cybersecurity question? Want to schedule a consult? Reach out below and we’ll get back to you soon.</p>
+<body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-  <form id="contact-form" action="https://formspree.io/f/xldnbpdg" method="POST">
-    <label for="name">Your Name</label>
-    <input type="text" name="name" id="name" required />
+  <!-- Navigation -->
+  <nav class="bg-gray-800 py-3 text-center space-x-8 mb-10">
+    <a href="/index.html" class="text-teal-400 hover:underline font-semibold">Home</a>
+    <a href="/services.html" class="text-teal-400 hover:underline font-semibold">Services</a>
+    <a href="/about.html" class="text-teal-400 hover:underline font-semibold">About</a>
+    <a href="/blog.html" class="text-teal-400 hover:underline font-semibold">Blog</a>
+    <a href="/contact.html" class="text-teal-400 hover:underline font-semibold">Contact</a>
+  </nav>
 
-    <label for="email">Your Email</label>
-    <input type="email" name="_replyto" id="email" required />
+  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-8">
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
+      <h1 class="text-4xl font-extrabold text-teal-400 mb-6">Contact Iron Dillo</h1>
+      <p class="text-gray-300 leading-relaxed mb-6">
+        Have a cybersecurity question? Want to schedule a consult? Reach out below and we’ll get back to you soon.
+      </p>
 
-    <label for="message">Message</label>
-    <textarea name="message" id="message" rows="6" required></textarea>
+      <form id="contact-form" action="https://formspree.io/f/xldnbpdg" method="POST" class="space-y-6">
+        <div>
+          <label for="name" class="block text-teal-400 font-semibold mb-2">Your Name</label>
+          <input type="text" name="name" id="name" required autocomplete="name" 
+            class="w-full p-3 rounded-md bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400" />
+        </div>
 
-    <button type="submit">Send Message</button>
-    <p class="note">* This form uses Formspree to handle your message securely and reliably.</p>
-  </form>
+        <div>
+          <label for="email" class="block text-teal-400 font-semibold mb-2">Your Email</label>
+          <input type="email" name="_replyto" id="email" required autocomplete="email" 
+            class="w-full p-3 rounded-md bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400" />
+        </div>
 
-  <p id="success" class="success-message" style="display:none;">Thanks for reaching out! We'll get back to you soon.</p>
+        <div>
+          <label for="message" class="block text-teal-400 font-semibold mb-2">Message</label>
+          <textarea name="message" id="message" rows="6" required 
+            class="w-full p-3 rounded-md bg-gray-900 border border-gray-700 text-gray-100 focus:outline-none focus:ring-2 focus:ring-teal-400"></textarea>
+        </div>
 
-  <script>
-    const form = document.getElementById('contact-form');
-    const successMessage = document.getElementById('success');
+        <button type="submit" 
+          class="bg-teal-400 text-gray-900 font-extrabold px-6 py-3 rounded-md hover:bg-teal-500 transition-colors duration-200">
+          Send Message
+        </button>
+      </form>
+    </section>
+  </main>
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm">
+    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline">Terms</a>
+  </footer>
 
-      const formData = new FormData(form);
-
-      try {
-        const response = await fetch(form.action, {
-          method: form.method,
-          body: formData,
-          headers: {
-            'Accept': 'application/json'
-          }
-        });
-
-        if (response.ok) {
-          form.style.display = 'none';
-          successMessage.style.display = 'block';
-        } else {
-          alert('Oops! There was a problem submitting your form.');
-        }
-      } catch (error) {
-        alert('Oops! There was a problem submitting your form.');
-      }
-    });
-  </script>
 </body>
 </html>
