--- a/privacy.html
+++ b/privacy.html
@@ -2,11 +2,11 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <title>Terms of Use – IronDillo</title>
-  <meta name="description" content="Understand the rules and disclaimers for using IronDillo's content, contact form, and services." />
+  <title>Privacy Policy – IronDillo</title>
+  <meta name="description" content="IronDillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-  <link rel="canonical" href="https://irondillo.com/terms.html" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="canonical" href="https://irondillo.com/privacy.html" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
@@ -14,7 +14,7 @@
   <!-- Logo and Header -->
   <header class="text-center p-6">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
-    <h1 class="text-4xl font-extrabold text-teal-400 mb-2">Terms of Use</h1>
+    <h1 class="text-4xl font-extrabold text-teal-400 mb-2">Privacy Policy</h1>
     <p class="text-gray-400">Effective Date: June 12, 2025</p>
   </header>
 
@@ -30,17 +30,19 @@
   <!-- Main Content -->
   <main class="flex-grow max-w-3xl mx-auto px-6 py-8 space-y-8">
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <p class="mb-4">By using this website (<span class="text-teal-300">irondillo.com</span>), you agree to the following terms and conditions:</p>
+      <p class="mb-4"><strong class="text-teal-300">IronDillo.com does not collect personal data.</strong> This site is designed with privacy in mind:</p>
 
       <ul class="list-disc list-inside space-y-2">
-        <li>This site provides cybersecurity-related information, services, and commentary for educational and informational purposes only.</li>
-        <li>No guarantees are made regarding the accuracy, completeness, or effectiveness of any advice provided. Use at your own discretion.</li>
-        <li>Engaging in services offered through this site (such as consulting) does not establish any legal partnership or contract unless explicitly agreed upon in writing.</li>
-        <li>You agree not to misuse this site for unlawful purposes, including attempts to exploit, hack, or deface its contents.</li>
-        <li>Iron Dillo is not responsible for the content of external sites linked from this domain.</li>
+        <li>No cookies</li>
+        <li>No tracking scripts</li>
+        <li>No analytics</li>
       </ul>
 
-      <p class="mt-6">For questions, concerns, or formal inquiries, please use the <a href="/index.html#contact" class="text-teal-400 underline hover:text-teal-300">contact form</a>.</p>
+      <p class="mt-4">If you choose to use the contact form, the message you send will be delivered via Formspree and may include your name, email, and the message content. This information is only used to reply to your inquiry and is not stored on this site.</p>
+
+      <p class="mt-4">I do not share, sell, or disclose personal information to third parties.</p>
+
+      <p class="mt-4">If you have any concerns, please reach out directly via the <a href="/index.html#contact" class="text-teal-400 underline hover:text-teal-300">contact form</a>.</p>
     </section>
   </main>
 
