--- a/contact.html
+++ b/contact.html
@@ -7,26 +7,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    .fade-in { animation: fadeIn 1s ease-out both; }
+  </style>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
   <!-- Logo Header -->
-  <header class="text-center pt-8">
+  <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
 
   <!-- Navigation -->
-<nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
-  <div class="flex justify-between">
-    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
-    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
-    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
-    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
-    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
-  </div>
-</nav>
-  
-  <main class="flex-grow max-w-4xl mx-auto px-6 py-12 space-y-8">
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
+    <div class="flex justify-between">
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+    </div>
+  </nav>
+
+  <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-8 fade-in">
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
       <h1 class="text-4xl font-extrabold text-teal-400 mb-6">Contact Iron Dillo</h1>
       <p class="text-gray-300 leading-relaxed mb-6">
@@ -60,10 +64,10 @@
     </section>
   </main>
 
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-12 text-sm max-w-3xl mx-auto rounded-md fade-in">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline">Terms</a>
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
 
 </body>
