--- a/services.html
+++ b/services.html
@@ -7,60 +7,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+    .fade-in { animation: fadeIn 1s ease-out both; }
+  </style>
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
   <!-- Logo Header -->
-  <header class="text-center pt-8">
+  <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
     <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
 
   <!-- Navigation -->
- <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
-  <div class="flex justify-between">
-    <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-3">Home</a>
-    <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-3">Services</a>
-    <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-3">About</a>
-    <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-3">Blog</a>
-    <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-3">Contact</a>
-  </div>
-</nav>
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
+    <div class="flex justify-between">
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/blog.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Blog</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+    </div>
+  </nav>
 
-  <main class="flex-grow max-w-5xl mx-auto px-6 py-4 space-y-16">
-
+  <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-12 fade-in">
     <!-- Services Sections -->
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Security Consultations & Risk Assessments</h2>
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Security Consultations &amp; Risk Assessments</h2>
       <p class="text-gray-300 leading-relaxed">Identify your current vulnerabilities, understand cybersecurity threats in clear language, and receive actionable recommendations to strengthen your systems and protect your data.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Cybersecurity Policy & Documentation Support</h2>
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Cybersecurity Policy &amp; Documentation Support</h2>
       <p class="text-gray-300 leading-relaxed">Develop custom cybersecurity policies, standard operating procedures (SOPs), and incident response plans designed specifically for your operations to help you stay prepared and compliant.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Website & Web Presence Security Audits</h2>
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Website &amp; Web Presence Security Audits</h2>
       <p class="text-gray-300 leading-relaxed">Audit your website, online forms, and public-facing content to find vulnerabilities such as cross-site scripting (XSS), misconfigurations, and other common security risks that could expose your business to cyberattacks.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Personal & Small Business Digital Security Training</h2>
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Personal &amp; Small Business Digital Security Training</h2>
       <p class="text-gray-300 leading-relaxed">One-on-one or small group training sessions covering phishing prevention, password safety, operational security basics, and other essential topics—delivered in straightforward, easy-to-understand language.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Incident Response Guidance & Remediation Assistance</h2>
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Incident Response Guidance &amp; Remediation Assistance</h2>
       <p class="text-gray-300 leading-relaxed">If you experience a security incident, I’ll guide you through the response process, help identify the scope, and assist with remediation to minimize damage and restore security quickly.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Vulnerability Scanning & Reporting</h2>
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Vulnerability Scanning &amp; Reporting</h2>
       <p class="text-gray-300 leading-relaxed">Thorough scans of your systems and networks to identify weaknesses, paired with clear, actionable reports outlining findings and recommended fixes.</p>
     </section>
 
     <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Secure Configuration of Devices & Networks</h2>
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Secure Configuration of Devices &amp; Networks</h2>
       <p class="text-gray-300 leading-relaxed">Ensure your devices, routers, and networks are set up with security best practices to reduce risks and protect your digital environment.</p>
     </section>
 
@@ -70,10 +73,9 @@
         <a href="/contact.html" class="underline hover:text-teal-300">Contact me</a> today for a free consultation and personalized quote.
       </p>
     </section>
-
   </main>
 
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-5xl mx-auto rounded-md">
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
     &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
     <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
     <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
